--- a/src/components/Numpad.scss
+++ b/src/components/Numpad.scss
@@ -3,7 +3,7 @@
 #zero, #one, #two,
 #three, #four, #five,
 #six, #seven, #eight,
-#nine, #decimal, #clear {
+#nine, #decimal, #ce, #ac {
   display: inline-block;
   width: 40px;
   height: 40px;
