Added clicked animation

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,9 @@
 $app-bg: #D3E0EA;
 $calculator-bg: #E5EBF0;
 $numpad-main-bg: #D0DBE4;
+$numpad-main-bg-hovered: #B4C5D3;
 $numpad-secondary-bg: #B9C9D7;
+$numpad-secondary-bg-hovered: #96AEC2;
 $main-text: #416F7C;
 $secondary-text: #86A9B3;
 $display-bg: #D0DBE4;
